--- a/resources/css/photoList.css
+++ b/resources/css/photoList.css
@@ -15,3 +15,12 @@
     padding: 10px;
     text-align: center;
 }
+.photo-show {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.link {
+    margin-top: 20px;
+}
